[gd_scene load_steps=8 format=2]

[ext_resource path="res://entities/pickups/Health.gd" type="Script" id=1]
[ext_resource path="res://63833__syna-max__medikit.wav" type="AudioStream" id=2]

[sub_resource type="SpatialMaterial" id=1]
uv1_scale = Vector3( 2, 2, 2 )
uv1_offset = Vector3( 88.846, -0.774, -0.502 )
uv1_triplanar = true

[sub_resource type="CubeMesh" id=2]
material = SubResource( 1 )
size = Vector3( 0.5, 2, 2 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CubeMesh" id=4]
material = SubResource( 3 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 1, 3, 3 )

[node name="Health" type="MeshInstance"]
transform = Transform( 0.0174524, -0.989849, 0, 0.999848, 0.0172779, 0, 0, 0, 0.99, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.33, 0, 0, 0, 1.05, 0, 0, 0, 0.2255, 0, 0, 0 )
mesh = SubResource( 4 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 0.33, 1.66533e-16, 0, -9.31323e-10, -4.41485e-08, 0.2255, 6.10641e-17, -1.01, -9.85692e-09, 0, 0, 0 )
mesh = SubResource( 4 )
material/0 = null

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 0.459096, -4.65661e-10, 0, -6.51926e-09, 0.3256, 0, 0, 0, 0.354904, 0, 0, 0 )
shape = SubResource( 5 )

[node name="UseMedKit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="finished" from="UseMedKit" to="." method="_on_UseMedKit_finished"]
